<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Hello!</string>
    <string name="welcome_message">Welcome to Minion!</string>
    <string name="icon_description">Placeholder image</string>
    <string name="title_activity_home">Home</string>
    <string name="button_manage_characters">Manage Characters</string>
    <string name="button_manage_groups">Manage Groups</string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_sqlite_test">Manage Characters</string>
    <string name="button_add_character">Add Character</string>
    <string name="button_remove_character">Remove Character</string>
    <string name="character_list">Characters:</string>
    <string name="testing">I am just testing this right now!</string>
    <string name="login_button">Login</string>
    <string name="login_title">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="invalid_login">Incorrect Username or Password</string>
    <string name="signup_clickable_text">Sign Up</string>
    <string name="signup_text">Don\'t have an account?</string>
    <string name="forgot_password_clickable_text">Forgot password?</string>
    <string name="signup_title">Signup</string>
    <string name="email_signup_input">Email</string>
    <string name="username_signup_input">Username</string>
    <string name="password_signup_input">Password</string>
    <string name="finish_signup_button">Sign me up</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_password_recovery">Password Recovery</string>
    <string name="recover_password_button">Recover Password</string>
    <string name="cancel_button">Cancel</string>
    <string name="invalid_username_message">Username already in use. Please try again.</string>
    <string name="return_to_login_clickable_text">(Return to Login)</string>
    <string name="invalid_password_message">Your password must be at least 8 characters long and contain at least one digit, 
	    one lowercase character, one uppercase character, one special character (@#$%^&#038;+=) and contain no spaces.</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="non_matching_passwords_message">The provided passwords do not match.</string>
    <string name="keep_logged_in">Remember me</string>
    <string name="button_logout">Logout</string>
    <string name="title_activity_security_question">Security Question</string>
    <string name="security_question_prompt">Choose a security question</string>
    <string name="security_answer_prompt">Answer your security question</string>
    <string name="placeholder_text">**Insert security question here**</string>
    <string name="invalid_username_error">The specified username does not exist. Try again.</string>
    <string name="waiting">Waiting&#8230;</string>

    <string-array name="security_question_array">
        <item>What is your quest?</item>
        <item>What is your favorite color?</item>
        <item>What is the air-speed velocity of an unladen swallow?</item>
    </string-array>

    <string name="next_button">Next</string>
    <string name="title_activity_password_recovery_question">PasswordRecoveryQuestionActivity</string>
    <string name="change_password_button">Change Password</string>
    <string name="new_password_input">Input new password</string>
    <string name="answer_button">Answer</string>
    <string name="title_activity_new_password_validator">NewPasswordValidatorActivity</string>
    <string name="title_activity_recovery_question">RecoveryQuestionActivity</string>
    <string name="title_activity_basic_info">Basic Info</string>
    <string name="character_name">Character Name</string>
    <string name="title_activity_char_create_main">Character Creation</string>
    <string name="button_basic_info">Basic Info</string>
    <string name="button_ability_scores">Ability Scores</string>
    <string name="button_skills">Skills</string>
    <string name="button_combat">Combat</string>
    <string name="button_saving_throws">Saving Throws</string>
    <string name="title_activity_ability_scores">Ability Scores</string>
    <string name="title_activity_skills">Skills</string>
    <string name="title_activity_combat">Combat</string>
    <string name="title_activity_saving_throws">Saving Throws</string>
    
    <string name="hit_points">HP (Health Points)</string>
    <string name="hit_points_total">Total</string>
    <string name="hit_points_dr">DR</string>
    <string name="speed">Speed (Land)</string>
    <string name="speed_base">Base Speed</string>
    <string name="speed_armor">With Armor</string>
    <string name="initiative">Initiative (Modifier)</string>
    <string name="initiative_total">Total</string>
    <string name="initiative_dex">Dex Modifier</string>
    <string name="initiative_misc">Misc Modifier</string>
    <string name="armor_class">AC (Armor Class)</string>
    <string name="armor_total">Total</string>
    <string name="armor_constant">10 +</string>
    <string name="armor_bonus">Armor</string>
    <string name="armor_shield">Shield</string>
    <string name="armor_dex">Dex</string>
    <string name="armor_size">Size</string>
    <string name="armor_natural">Natural</string>
    <string name="armor_deflection">Deflection</string>
    <string name="armor_misc">Misc</string>
    <string name="attack_bonus">Base Attack Bonus</string>
    
    <string name="alignment">Alignment</string>
    <string name="enter_text">Enter text&#8230;</string>
    <string name="player">Player</string>
    <string name="char_level">Character Level</string>
    <string name="deity">Deity</string>
    <string name="homeland">Homeland</string>
    <string name="race">Race</string>
    <string name="size">Size</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="hair">Hair</string>
    <string name="eyes">Eyes</string>
    <string name="done">Done</string>
    
    <string name="ab_name">Ability Name</string>
    <string name="ab_score">Ability Score</string>
    <string name="ab_mod">Ability Modifier</string>
    <string name="temp_adjust">Temp Adjust</string>
    <string name="temp_mod">Temp Mod</string>
    <string name="str">STR\nStrength</string>
    <string name="dex">DEX\nDexterity</string>
    <string name="con">CON\nConstitution</string>
    <string name="intel">INT\nIntelligence</string>
    <string name="wis">WIS\nWisdom</string>
    <string name="cha">CHA\nCharisma</string>
    
    <string name="skill_names">Skill Names</string>
    <string name="ranks">Ranks</string>
    <string name="misc_mod">Misc. Mod.</string>
    <string name="acrobatics">Acrobatics</string>
    <string name="appraise">Appraise</string>
    <string name="bluff">Bluff</string>
    <string name="climb">Climb</string>
    <string name="craft">Craft</string>
    <string name="diplomacy">Diplomacy</string>
    <string name="disable_device">Disable Device</string>
    <string name="disguise">Disguise</string>
    <string name="escape_artist">Escape Artist</string>
    <string name="fly">Fly</string>
    <string name="handle_animal">Handle Animal</string>
    <string name="heal">Heal</string>
    <string name="intimidate">Intimidate</string>
    <string name="knowledge_arcana">Knowledge (Arcana)</string>
    <string name="knowledge_dungeoneering">Knowledge (Dungeoneering)</string>
    <string name="knowledge_engineering">Knowledge (Engineering)</string>
    <string name="knowledge_geography">Knowledge (Geography)</string>
    <string name="knowledge_history">Knowledge (History)</string>
    <string name="knowledge_local">Knowledge (Local)</string>
    <string name="knowledge_nature">Knowledge (Nature)</string>
    <string name="knowledge_nobility">Knowledge (Nobility)</string>
    <string name="knowledge_planes">Knowledge (Planes)</string>
    <string name="knowledge_religion">Knowledge (Religion)</string>
    <string name="linguistics">Linguistics</string>
    <string name="perception">Perception</string>
    <string name="perform">Perform</string>
    <string name="profession">Profession</string>
    <string name="ride">Ride</string>
    <string name="sense_motive">Sense Motive</string>
    <string name="sleight_of_hand">Sleight of Hand</string>
    <string name="spellcraft">Spellcraft</string>
    <string name="stealth">Stealth</string>
    <string name="survival">Survival</string>
    <string name="swim">Swim</string>
    <string name="use_magic_device">Use Magic Device</string>
    
    <string name="fortitude_title">Fortitude (Constitution)</string>
    <string name="reflex_title">Reflex (Dexterity)</string>
    <string name="will_title">Will (Wisdom)</string>
    <string name="base_save">Base</string>
    <string name="ability_modifier">Ability</string>
    <string name="magic_modifier">Magic</string>
    <string name="misc_modifier">Misc</string>
    <string name="temp_modifier">Temp</string>
    
    <string name="total">Total</string>
    <string name="title_activity_characters">Manage Characters</string>
    <string name="title_activity_groups">Manage Groups</string>
    
    <string name="welcome">Welcome to Minion Character Creation!</string>
    <string name="char_creation_success">Character successfully saved!</string>
    <string name="welcome_group">Welome to Minion Group Creation!</string>
    <string name="title_activity_group_create">GroupCreate</string>

</resources>
