<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <Button
        android:id="@+id/buttonhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_message"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_home"
        android:onClick="gotoHome" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonhome"
        android:layout_centerHorizontal="true"
        android:text="@string/button_send"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:hint="@string/welcome_message"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/icon_description"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:scaleType="centerInside"
        android:src="@drawable/husky_soft" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonhome"
        android:layout_marginTop="22dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/login_title" 
        android:onClick="gotoLogin"/>

</RelativeLayout>
