<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SQLiteTestActivity" >
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textAlignment="center" />
    
    <EditText android:id="@+id/add_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/list"
        android:hint="@string/edit_message" />
     
     <Button android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_character"
        android:text="@string/button_add_character"
     	android:onClick="addCharacter" />
     
     <Button android:id="@+id/button_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_add"
        android:text="@string/button_remove_character"
     	android:onClick="removeCharacter" />
     
</RelativeLayout>
