<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BasicInfoActivity" >

    <TextView
        android:id="@+id/char_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_name" />
    
    <EditText android:id="@+id/char_name_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_name_title"
        android:hint="@string/enter_text" />
    
    <TextView
        android:id="@+id/alignment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_toRightOf="@+id/char_name_title"
        android:text="@string/alignment" />
    
    <EditText android:id="@+id/alignment_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_toRightOf="@+id/char_name_enter"
        android:layout_below="@id/alignment_title"
        android:hint="@string/enter_text" />
    
    <TextView
        android:id="@+id/player_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/char_name_enter"
        android:text="@string/player" />
    
    <EditText android:id="@+id/player_enter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_title"
        android:hint="@string/enter_text" />
    
    <TextView
        android:id="@+id/char_level_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_enter"
        android:text="@string/char_level" />
    
    <EditText android:id="@+id/char_level_enter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/char_level_title"
        android:hint="@string/enter_text" />
    
    <TextView
        android:id="@+id/deity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/char_level_enter"
        android:text="@string/deity" />
    
    <EditText android:id="@+id/deity_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deity_title"
        android:hint="@string/enter_text" />
    
    <TextView
        android:id="@+id/homeland_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="118dp"
        android:layout_toRightOf="@+id/deity_title"
        android:layout_below="@+id/char_level_enter"
        android:text="@string/homeland" />
    
    <EditText android:id="@+id/homeland_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/deity_enter"
        android:layout_below="@id/homeland_title"
        android:hint="@string/enter_text" />
    
    
    <TextView
        android:id="@+id/race_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deity_enter"
        android:text="@string/race" />
    
    <EditText android:id="@+id/race_enter"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/race_title" />
    
    <TextView
        android:id="@+id/size_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/race_title"
        android:layout_below="@+id/deity_enter"
        android:text="@string/size" />
    
    <EditText android:id="@+id/size_enter"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/race_enter"
        android:layout_below="@id/size_title" />
    
    <TextView
        android:id="@+id/gender_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_below="@+id/homeland_enter"
        android:layout_toRightOf="@+id/size_title"
        android:text="@string/gender" />
    
    <EditText android:id="@+id/gender_enter"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/gender_title"
        android:layout_toRightOf="@+id/size_enter" />
    
    <TextView
        android:id="@+id/age_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_toRightOf="@+id/gender_title"
        android:layout_below="@+id/homeland_enter"
        android:text="@string/age" />
    
    <EditText android:id="@+id/age_enter"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/gender_enter"
        android:layout_below="@id/age_title" />

</RelativeLayout>