<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PasswordRecoveryQuestionActivity" >

    <TextView
        android:id="@+id/securityQuestion"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/placeholder_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/questionInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/securityQuestion"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/incorrectAnswerError"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionInput"
        android:text="@string/invalid_username_message"
        android:textColor="#FF0000"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/finishButton"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/incorrectAnswerError"
        android:layout_centerHorizontal="true"
        android:text="@string/answer_button"
        android:onClick="gotoLogin" />

</RelativeLayout>